--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@ layout: default
             </a>
             {% endif %}
           </div>
-		  <p class="marketing-desc">{{ site.article_1 }}</p>
-		  <p class="marketing-desc">{{ site.article_2 }}</p>
-		  <p class="marketing-desc">{{ site.article_3 }}</p>
+		  <p class="marketing-desc">{{ site.article }}</p>
 		  
 <h1>Daftar File PDF</h1>
 <ul>
