--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
             </a>
             {% endif %}
           </div>
-		  <p class="marketing-desc">{{ site.article }}</p>
+		  <p class="marketing-desc">{{ site.articlefull | markdownify }}</p>
 		  
 <h1>Daftar File PDF</h1>
 <ul>
