--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ layout: default
 
           <p class="marketing-desc">{{ site.marketing_desc }}</p>
           <div class="download-buttons">
-            <a class="download-btn btn btn-lg" href="https://www.postzo.store/leaked-video?Mayagit">
+            <a class="download-btn btn btn-lg" href="{{ site.link_1 }}">
               <i class="fa fa-play" aria-hidden="true"></i> Watch
             </a>
 
             {% if site.app.android_id %}
-            <a class="download-btn btn btn-lg" href="https://www.postzo.store/leaked-video?Mayagit">
+            <a class="download-btn btn btn-lg" href="{{ site.link_1 }}">
               <i class="fa fa-download" aria-hidden="true"></i> Download
             </a>
             {% endif %}
