--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
             </a>
 
             {% if site.app.android_id %}
-            <a class="download-btn btn btn-lg" href="{{ site.app.link_2 }}">
+            <a class="download-btn btn btn-lg" href="{{ site.2.link_2 }}">
               <i class="fa fa-download" aria-hidden="true"></i> Download
             </a>
             {% endif %}
